# franka_learning_from_demonstrations_ros2

./: README.md  environment.yml
lfd_msgs/: CMakeLists.txt  package.xml  setup.cfg
lfd_msgs/srv/: SetTemplate.srv
object_localization/: package.xml  setup.cfg  setup.py
object_localization/config/: camera_transform.yaml
object_localization/launch/: box_localization_launch.py  camera_launch.py  record_template_launch.py
object_localization/object_localization/: active_localizer.py  localizer_service.py  localizer_sift.py  record_template.py  static_transform_camera.py  tf_utils.py
object_localization/object_localization/gui/: gui_template.py
panda_control/: README.md  package.xml  setup.cfg  setup.py
panda_control/panda_control/: __init__.py  panda.py  pose_transform_functions.py
quaternion_algebra/: package.xml  setup.cfg  setup.py
quaternion_algebra/quaternion_algebra/: algebra.py  slerp.py
skills_manager/: package.xml  setup.cfg  setup.py
skills_manager/launch/: home_launch.py  play_skill_launch.py  record_skill_launch.py
skills_manager/skills_manager/: camera_feedback.py  feedback.py  get_scene.py  home.py  insertion.py  lfd.py  play_skill.py  record_skill.py  ros_param_manager.py  ros_utils.py  skill.py  transfom.py
trajectory_data/: package.xml  setup.cfg  setup.py  skill_visualizer.py
trajectory_data/trajectory_data/: trajectory.py
