<?xml version="1.0"?>
<package format="3">
  <name>panda_control</name>
  <version>0.1.0</version>
  <description>Panda classed to communicate with the controller in python and tranformation tools of the trajectories</description>

  <maintainer email="g.franzese@tudelft.nl">Giovanni Franzese</maintainer>

  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>franka_gripper</depend>
  <depend>franka_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>






