<?xml version="1.0"?>
<package format="3">
  <name>quaternion_algebra</name>
  <version>0.1.0</version>
  <description>Quaternion algebra tool</description>

  <maintainer email="petr.vanc@cvut.cz">petrvanc</maintainer>
  <author email="gfranzese@tudelft.nl">giovannifranzese (Original Author)</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>

</package>






