<?xml version="1.0"?>
<package format="3">
  <name>skills_manager</name>
  <version>0.0.1</version>
  <description>The skills_manager package</description>

  <maintainer email="petr.vanc@cvut.cz">petrvanc</maintainer>
  <author email="gfranzese@tudelft.nl">giovannifranzese (Original Author)</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_export_depend>rclpy</build_export_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
