<?xml version="1.0"?>
<package format="3">
  <name>trajectory_data</name>
  <version>1.0.0</version>
  <description>The repository with the saved data</description>
  <maintainer email="petr.vanc@cvut.cz">petrvanc</maintainer>
  <author email="gfranzese@tudelft.nl">giovannifranzese (Original Author)</author>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>pynput</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
